# magma

./: .gitignore  README.md  go.mod  input.yaml  main.go
cmd/magma/: generatespec.go  root.go
cmd/specautomator/: generatespec.go  inspect.go  reverse.go  root.go
magma-go/: go.mod  input.txt  input.yaml  sampleEndpoints.txt
magma-go/cmd/magma/: generatecosmos.go  generateevm.go  generatespec.go  root.go
magma-go/pkg/magma/: common.go  constants.go  magma.go  magma_cosmos.go  magma_evm.go  magmacosmos.go
magma-rust/: .gitignore  Cargo.toml  README.md  build  input.yaml
magma-rust/src/: constants.rs  gen_spec.rs  generate_spec.rs  input.rs  main.rs  proposal.rs  read_spec.rs  spec.rs  validate.rs
pkg/magma/: constants.go  magma.go
pkg/specautomator/: specautomator.go
