[package]
name = "magma"
version = "0.1.0"
edition = "2021"

[dependencies]
# cli
clap = {version = "4.2", features = ["derive"]}
colored    = "2.0"

# logging
log = "0.4"
env_logger = "0.10.0"

# error handling
color-eyre = "0.6.2"
eyre = "0.6.8"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
